added basic models and template for connecting to database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8001
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
+spring.datasource.username=testusr
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=create
+
+logging.level.org.springframework=error
