--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8001
 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
+#spring.datasource.username=testusr
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:h2:mem:memdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
+
+logging.level.org.springframework=error
