--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+##### General Setting #####
+
 server.port=8001
+logging.level.org.springframework=error
+
+##### Database Setting #####
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
 #spring.datasource.username=testusr
@@ -8,5 +13,3 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create
-
-logging.level.org.springframework=error
